--- a/app/index.html
+++ b/app/index.html
@@ -7,5 +7,32 @@
   <title>Form autocomplete</title>
 </head>
 <body>
+  <div class="container">
+    <form class="form">
+      <div class="form__group">
+        <label>Компания или ИП</label>
+        <searchable-dropdown id="dropdown" placeholder="Введите название, ИНН, ОГРН или адрес организации" />
+      </div>
+      <div class="form__group">
+        <span id="type"></span>
+      </div>
+      <div class="form__group">
+        <label>Краткое наименование</label>
+        <input id="name_short" type="text">
+      </div>
+      <div class="form__group">
+        <label>Полное наименование</label>
+        <input id="name_full" type="text">
+      </div>
+      <div class="form__group">
+        <label>ИНН / КПП</label>
+        <input id="inn_kpp" type="text">
+      </div>
+      <div class="form__group">
+        <label>Адрес</label>
+        <input id="address" type="text">
+      </div>
+    </form>
+  </div>
 </body>
 </html>
